crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_comment_before_with.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n)\\n// aggregate\\nWITH count(n) AS total\\nRETURN total\")"
---
MATCH (n)
// aggregate
WITH COUNT(n) AS total
RETURN total
