crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_comment_inline_with_return_item.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n.name, /* the age */ n.age\")"
---
MATCH (n)
RETURN n.name, /* the age */ n.age
