crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_corpus_keyword_lower_write_clause.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "format_with(\"CREATE (n:Person {name: 'Alice'}) RETURN n\", &opts).unwrap()"
---
create (n:Person {name: 'Alice'})
return n
