crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_corpus_trailing_commas_always_multi_return.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "format_with(\"MATCH (n:Person) RETURN n.name, n.age, n.email\", &opts).unwrap()"
---
MATCH (n:Person)
RETURN n.name, n.age, n.email
