crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_create_node.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"CREATE (n:Person {name: 'Bob', age: 25})\")"
---
CREATE (n:Person {name: 'Bob', age: 25})
