crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_delete_node.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person {name: 'Temp'}) DELETE n\")"
---
MATCH (n:Person {name: 'Temp'})
DELETE n
