crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_detach_delete.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person {name: 'Temp'}) DETACH DELETE n\")"
---
MATCH (n:Person {name: 'Temp'})
DETACH
DELETE n
