crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_double_match_return.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (a:Person) MATCH (b:Person) WHERE a.name <> b.name RETURN a, b\")"
---
MATCH (a:Person)
MATCH (b:Person)
WHERE a.name <> b.name
RETURN a, b
